MOB-3614: add image preview

--- a/sdk/src/main/res/layout/dg_item_agent_file.xml
+++ b/sdk/src/main/res/layout/dg_item_agent_file.xml
@@ -63,8 +63,7 @@
                     android:id="@+id/picture"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/bg_media_file"
-                    android:tint="@color/silver"
+                    android:background="@drawable/bg_incoming_file"
                     app:fileIcon="@{viewModel.type}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +77,8 @@
                     android:layout_marginStart="8dp"
                     android:ellipsize="middle"
                     android:singleLine="true"
-                    android:textColor="@color/midnight"
-                    android:textSize="14sp"
+                    android:textColor="@color/color_text_incoming_message"
+                    android:textSize="16sp"
                     app:fileName="@{viewModel.state}"
                     app:layout_constraintBottom_toTopOf="@id/download"
                     app:layout_constraintEnd_toEndOf="parent"
