--- a/sdk/src/main/res/layout/dg_item_client_file.xml
+++ b/sdk/src/main/res/layout/dg_item_client_file.xml
@@ -47,7 +47,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="16dp"
-                android:background="@drawable/bg_media_file"
+                android:background="@drawable/bg_outgoing_file"
                 android:tint="@color/darkPastelGreen"
                 app:fileIcon="@{viewModel.type}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +63,8 @@
                 android:ellipsize="middle"
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:fileName="@{viewModel.state}"
                 app:layout_constraintBottom_toTopOf="@id/download"
                 app:layout_constraintEnd_toEndOf="parent"
