--- a/sdk/src/main/res/layout/dg_item_uploading_file.xml
+++ b/sdk/src/main/res/layout/dg_item_uploading_file.xml
@@ -51,7 +51,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="16dp"
-                android:background="@drawable/bg_media_file"
+                android:background="@drawable/bg_outgoing_file"
                 android:visibility="@{viewModel.isError() ? View.INVISIBLE : View.VISIBLE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="16dp"
-                android:background="@drawable/bg_media_file"
+                android:background="@drawable/bg_outgoing_file"
                 android:src="@drawable/vic_error_36"
                 android:visibility="@{viewModel.isError() ? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
                 android:singleLine="true"
                 android:text="@{viewModel.fileName}"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/fileSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
