--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -6,14 +6,16 @@
     <color name="color_on_background">#ffffff</color>
     <color name="color_input_text">#1F1F1F</color>
     <color name="color_background_input_text">#F1F0F0</color>
-    <color name="color_background_incoming_message">#F1F0F0</color>
+    <color name="color_background_incoming_message">#F4F4F9</color>
     <color name="color_text_incoming_message">#222D38</color>
     <color name="color_text_connection_state">#000000</color>
     <color name="color_background_connection_state">#ffffff</color>
     <color name="color_background_banner">#ddffffff</color>
     <color name="color_text_hint">#BABABA</color>
+    <color name="color_tint_navigation_icon">#ffffff</color>
     <color name="color_text_title">#ffffff</color>
     <color name="color_text_subtitle">#ffffff</color>
+    <color name="color_text_error">#C7C7CC</color>
 
     <color name="black">#000000</color>
     <color name="black30">#4D000000</color>
