MOB-3569: add deferred service restart

--- a/sdk/src/main/res/layout/fragment_jivo_chat.xml
+++ b/sdk/src/main/res/layout/fragment_jivo_chat.xml
@@ -195,7 +195,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:onClick="@{() -> fragment.retry()}"
+                    android:onClick="@{() -> viewModel.retry()}"
                     android:text="@string/connection_state_retry"
                     android:textColor="@color/persianBlue"
                     android:textSize="12sp"
