--- a/sdk/src/main/res/layout/dg_item_client_file.xml
+++ b/sdk/src/main/res/layout/dg_item_client_file.xml
@@ -39,7 +39,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/bg_outgoing_message"
             android:paddingStart="16dp"
-            android:paddingEnd="4dp"
+            android:paddingEnd="8dp"
             android:paddingBottom="4dp">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -57,7 +57,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/fileName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:ellipsize="middle"
