--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_text_connection_state">#000000</color>
     <color name="color_background_connection_state">#ffffff</color>
     <color name="color_background_banner">#ddffffff</color>
+    <color name="color_text_banner">#BABABA</color>
     <color name="color_text_hint">#BABABA</color>
     <color name="color_tint_navigation_icon">#ffffff</color>
     <color name="color_text_title">#ffffff</color>
