--- a/sdk/src/main/res/values-night/colors.xml
+++ b/sdk/src/main/res/values-night/colors.xml
@@ -17,4 +17,5 @@
     <color name="color_text_title">#C7C7CC</color>
     <color name="color_text_subtitle">#636366</color>
     <color name="color_text_error">#636366</color>
+    <color name="color_background_media_icon">#6E7878</color>
 </resources>
