--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="color_text_title">#ffffff</color>
     <color name="color_text_subtitle">#ffffff</color>
     <color name="color_text_error">#C7C7CC</color>
+    <color name="color_background_media_icon">#6E7878</color>
 
     <color name="black">#000000</color>
     <color name="black30">#4D000000</color>
