MOB-3665: remove colors to resources

--- a/sdk/src/main/res/drawable/vic_bubble.xml
+++ b/sdk/src/main/res/drawable/vic_bubble.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="30">
 
     <path
-        android:fillColor="#FFF"
+        android:fillColor="@color/white"
         android:pathData="M2.803 21.18l-0.02 0.006 s7.641 13.786 26.914 5.424c0 0-1.484-1.734-4.359-3.48
         3.24-3.708 4.42-9.01 2.62-13.95C25.325 1.94 17.299-1.784 10.034 0.86 2.767
         3.506-0.987 11.517 1.647 18.756c0.313 0.859 0.701 1.668 1.156 2.424z" />
