--- a/sdk/src/main/res/drawable/vic_connected_24.xml
+++ b/sdk/src/main/res/drawable/vic_connected_24.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#76ff03"
+        android:fillColor="@color/lawnGreen"
         android:pathData="M9.01,14H2v2h7.01v3L13,15l-3.99,-4V14zM14.99,13v-3H22V8h-7.01V5L11,9L14.99,13z" />
 </vector>
