--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="color_primary">#000000</color>
-    <color name="window_background">#ffffff</color>
-    <color name="color_surface">#ffffff</color>
-    <color name="color_on_background">#ffffff</color>
+    <color name="window_background">#FFFFFF</color>
+    <color name="color_surface">#FFFFFF</color>
+    <color name="color_on_background">#FFFFFF</color>
     <color name="color_input_text">#1F1F1F</color>
     <color name="color_background_input_text">#F1F0F0</color>
     <color name="color_background_incoming_message">#F4F4F9</color>
     <color name="color_text_incoming_message">#222D38</color>
     <color name="color_text_connection_state">#000000</color>
-    <color name="color_background_connection_state">#ffffff</color>
-    <color name="color_background_banner">#ddffffff</color>
+    <color name="color_background_connection_state">#FFFFFF</color>
+    <color name="color_background_banner">#DDFFFFFF</color>
     <color name="color_text_banner">#BABABA</color>
     <color name="color_text_hint">#BABABA</color>
-    <color name="color_tint_navigation_icon">#ffffff</color>
-    <color name="color_text_title">#ffffff</color>
-    <color name="color_text_subtitle">#ffffff</color>
+    <color name="color_tint_navigation_icon">#FFFFFF</color>
+    <color name="color_text_title">#FFFFFF</color>
+    <color name="color_text_subtitle">#FFFFFF</color>
     <color name="color_text_error">#C7C7CC</color>
     <color name="color_background_media_icon">#6E7878</color>
+    <color name="color_background_incoming_file">#FFFFFF</color>
+    <color name="color_background_btn_send">#DEDEDE</color>
+    <color name="color_btn_arrow_send">#FFFFFF</color>
+    <color name="color_background_placeholder_image">#FFFFFF</color>
+    <color name="color_placeholder_image">#F4F4F9</color>
+    <color name="color_banner">#24243B</color>
 
     <color name="black">#000000</color>
     <color name="black30">#4D000000</color>
     <color name="nero">#1F1F1F</color>
-    <color name="white">#ffffff</color>
-    <color name="white30">#4Dffffff</color>
-    <color name="white85">#ddffffff</color>
-    <color name="white_90">#1AFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white30">#4DFFFFFF</color>
+    <color name="white85">#DDFFFFFF</color>
+    <color name="white90">#1AFFFFFF</color>
     <color name="whiteSmoke">#F1F0F0</color>
     <color name="midnight">#222D38</color>
     <color name="darkPastelGreen">#18C139</color>
     <color name="silver">#BABABA</color>
     <color name="grey">#828282</color>
-    <color name="blueGrey">#a4b4bc</color>
+    <color name="blueGrey">#A4B4BC</color>
     <color name="persianBlue">#1041E7</color>
     <color name="error">#FF4444</color>
     <color name="apple">#5ABD4E</color>
     <color name="eastBay">#485667</color>
     <color name="royalBlue">#3983EF</color>
     <color name="wellRead">#9F3E43</color>
+    <color name="eerieBlack">#141414</color>
+    <color name="manatee">#88909E</color>
+    <color name="conifer">#B2FF59</color>
+    <color name="violetRed">#EC407A</color>
+    <color name="lawnGreen">#76FF03</color>
+    <color name="luckyPoint">#2F3348</color>
+    <color name="portGore">#434964</color>
 </resources>
