--- a/sdk/src/main/res/layout/fragment_jivo_chat.xml
+++ b/sdk/src/main/res/layout/fragment_jivo_chat.xml
@@ -255,6 +255,7 @@
                     android:background="@drawable/bg_text_input"
                     android:focusable="true"
                     android:maxHeight="120dp"
+                    android:maxLength="1000"
                     android:paddingVertical="8dp"
                     android:paddingStart="20dp"
                     android:textColor="@color/color_input_text"
