Sample: update version sdk

--- a/sample/src/main/res/values/style.xml
+++ b/sample/src/main/res/values/style.xml
@@ -7,4 +7,25 @@
         <item name="colorAccent">@color/darkPastelGreen</item>
     </style>
 
+    <style name="JivoSDKThemeSwitcher">
+        <item name="theme">@style/Main.Theme.JivoSDK.Blue</item>
+    </style>
+
+    <style name="Widget.JivoSDK.AppBarLayout" parent="Widget.Material3.AppBarLayout">
+        <item name="android:background">@drawable/bg_appbar</item>
+    </style>
+
+    <style name="Widget.JivoSDK.Toolbar" parent="">
+        <item name="navigationIcon">@drawable/jivo_sdk_vic_arrow_24dp</item>
+        <item name="navigationIconTint">?attr/colorOnPrimary</item>
+        <item name="title">@string/title</item>
+        <item name="subtitle">@string/subtitle</item>
+        <item name="titleTextAppearance">?attr/textAppearanceSubtitle2</item>
+        <item name="titleTextColor">?attr/colorOnPrimary</item>
+        <item name="subtitleTextColor">@color/jivo_sdk_color_on_surface_84</item>
+        <item name="subtitleTextAppearance">?attr/textAppearanceCaption</item>
+        <item name="logo">@drawable/vic_logo</item>
+        <item name="titleMarginStart">8dp</item>
+    </style>
+
 </resources>
