--- a/sdk/src/main/res/values/attr.xml
+++ b/sdk/src/main/res/values/attr.xml
@@ -4,4 +4,11 @@
         <attr name="clipToPadding" format="boolean" />
         <attr name="padding" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="JivoSDKToolbar">
+        <attr name="logo" format="reference" />
+        <attr name="hideLogo" format="boolean" />
+        <attr name="title" format="string" />
+        <attr name="subtitle" format="string" />
+    </declare-styleable>
 </resources>
